apps/dev/sap-api/sap-api-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sap-api
spec:
  template:
    spec:
      containers:
        - name: sap-api
          image: ghcr.io/ssi-dk/sap-api:v0.3.5
